fix the cors setup